// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorList Container should render Default 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
  gap: 32px;
  justify-items: center;
}

.emotion-2 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: rgba(233, 30, 99, 0.4);
  display: grid;
  grid-template-rows: max-content 1fr;
  gap: 24px;
  width: 240px;
  text-align: center;
}

.emotion-2:hover {
  text-decoration-color: inherit;
}

.emotion-3 {
  display: grid;
  width: 100%;
}

.emotion-5 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  border-radius: 50%;
}

.emotion-9 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 300;
  font-size: 1.25rem;
  line-height: 1.4;
}

.emotion-10 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-10.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

<article
    class="emotion-0 emotion-1"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-2"
      href="https://example.com"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <img
          alt="DSC07717"
          class="emotion-5 emotion-6"
          loading="lazy"
          sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
          srcset="https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="emotion-7 emotion-8"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 emotion-9"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 emotion-10"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-2"
      href="https://example.com"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <img
          alt="DSC07717"
          class="emotion-5 emotion-6"
          loading="lazy"
          sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
          srcset="https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="emotion-7 emotion-8"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 emotion-9"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 emotion-10"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-2"
      href="https://example.com"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <img
          alt="DSC07717"
          class="emotion-5 emotion-6"
          loading="lazy"
          sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
          srcset="https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="emotion-7 emotion-8"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 emotion-9"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 emotion-10"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithClassName 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
  gap: 32px;
  justify-items: center;
}

.emotion-2 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: rgba(233, 30, 99, 0.4);
  display: grid;
  grid-template-rows: max-content 1fr;
  gap: 24px;
  width: 240px;
  text-align: center;
}

.emotion-2:hover {
  text-decoration-color: inherit;
}

.emotion-3 {
  display: grid;
  width: 100%;
}

.emotion-5 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  border-radius: 50%;
}

.emotion-9 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 300;
  font-size: 1.25rem;
  line-height: 1.4;
}

.emotion-10 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-10.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

<article
    class="extra-classname emotion-0 emotion-1"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-2"
      href="https://example.com"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <img
          alt="DSC07717"
          class="emotion-5 emotion-6"
          loading="lazy"
          sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
          srcset="https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="emotion-7 emotion-8"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 emotion-9"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 emotion-10"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-2"
      href="https://example.com"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <img
          alt="DSC07717"
          class="emotion-5 emotion-6"
          loading="lazy"
          sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
          srcset="https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="emotion-7 emotion-8"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 emotion-9"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 emotion-10"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-2"
      href="https://example.com"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <img
          alt="DSC07717"
          class="emotion-5 emotion-6"
          loading="lazy"
          sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
          srcset="https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="emotion-7 emotion-8"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 emotion-9"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 emotion-10"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithEmotion 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
  gap: 32px;
  justify-items: center;
}

.emotion-2 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: rgba(233, 30, 99, 0.4);
  display: grid;
  grid-template-rows: max-content 1fr;
  gap: 24px;
  width: 240px;
  text-align: center;
}

.emotion-2:hover {
  text-decoration-color: inherit;
}

.emotion-3 {
  display: grid;
  width: 100%;
}

.emotion-5 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  border-radius: 50%;
}

.emotion-9 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 300;
  font-size: 1.25rem;
  line-height: 1.4;
}

.emotion-10 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-10.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

<article
    class="emotion-0 emotion-1"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-2"
      href="https://example.com"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <img
          alt="DSC07717"
          class="emotion-5 emotion-6"
          loading="lazy"
          sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
          srcset="https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="emotion-7 emotion-8"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 emotion-9"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 emotion-10"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-2"
      href="https://example.com"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <img
          alt="DSC07717"
          class="emotion-5 emotion-6"
          loading="lazy"
          sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
          srcset="https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="emotion-7 emotion-8"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 emotion-9"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 emotion-10"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-2"
      href="https://example.com"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <img
          alt="DSC07717"
          class="emotion-5 emotion-6"
          loading="lazy"
          sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
          srcset="https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title=""
        />
      </div>
      <div
        class="emotion-7 emotion-8"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 emotion-9"
        >
          Example Name
        </h6>
        <p
          class="MuiTypography-root MuiTypography-body1 emotion-10"
        >
          Co-Geschäftsleitung & Chefredaktor
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;
